containers-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange
  template:
    metadata:
      labels:
        app: data-exchange
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
        - name: writer
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - >
              while true;
              do
                echo "$(date) — test message" >> /shared/data.txt;
                sleep 5;
              done;
          volumeMounts:
            - name: shared-data
              mountPath: /shared

        - name: reader
          image: wbitt/network-multitool
          command: ["/bin/sh", "-c"]
          args:
            - >
              tail -f /shared/data.txt;
          volumeMounts:
            - name: shared-data
              mountPath: /shared
