containers-pv-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pv-data-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pv-data-exchange
  template:
    metadata:
      labels:
        app: pv-data-exchange
    spec:
      volumes:
        - name: shared-pv
          persistentVolumeClaim:
            claimName: local-pvc
      containers:
        - name: writer
          image: busybox
          command: ["/bin/sh", "-c"]
          args:
            - >
              while true;
              do
                echo "$(date) — PV test message" >> /shared/data.txt;
                sleep 5;
              done;
          volumeMounts:
            - name: shared-pv
              mountPath: /shared

        - name: reader
          image: wbitt/network-multitool
          command: ["/bin/sh", "-c"]
          args:
            - tail -f /shared/data.txt;
          volumeMounts:
            - name: shared-pv
              mountPath: /shared
