containers-sc-data-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-exchange-sc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-exchange-sc
  template:
    metadata:
      labels:
        app: data-exchange-sc
    spec:
      containers:
      - name: writer
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
          - >
            while true;
            do
              echo "$(date) — SC test message" >> /shared/data.txt;
              sleep 5;
            done;
        volumeMounts:
        - name: shared-sc
          mountPath: /shared
      - name: reader
        image: wbitt/network-multitool
        command: ["/bin/sh", "-c"]
        args:
          - tail -f /shared/data.txt;
        volumeMounts:
        - name: shared-sc
          mountPath: /shared
      volumes:
      - name: shared-sc
        persistentVolumeClaim:
          claimName: local-pvc-sc
