deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: wbitt/network-multitool
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: api-page
              mountPath: /usr/share/nginx/html/api
      volumes:
        - name: api-page
          configMap:
            name: backend-api-page
