deployment-task2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-task2
  template:
    metadata:
      labels:
        app: nginx-task2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
