deployment-task3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy-task3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-task3
  template:
    metadata:
      labels:
        app: nginx-task3
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
        - name: multitool
          image: praqma/network-multitool:latest
          ports:
            - containerPort: 8080
