multitool-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multitool-client
spec:
  containers:
    - name: multitool
      image: praqma/network-multitool:latest
      command: ["sleep", "3600"]
