service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-nodeport-task3
spec:
  type: NodePort
  selector:
    app: nginx-task3
  ports:
    - name: nginx-external
      port: 80
      targetPort: 80
      nodePort: 30080
