service-task2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-task2
spec:
  selector:
    app: nginx-task2
  ports:
    - port: 80
      targetPort: 80
