service-task3.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc-task3
spec:
  selector:
    app: nginx-task3
  ports:
    - name: nginx-port
      port: 9001
      targetPort: 80
    - name: multitool-port
      port: 9002
      targetPort: 8080
